# target-postgres

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  setup.py
.circleci/: config.yml
.circleci/integration/: target-config.json
.circleci/integration/tap-github/: catalog.json  config-template.json  properties.json
.circleci/integration/tap-postgres/: config.json
.devcontainer/: Dockerfile  devcontainer.json
docs/: TableMetadata.md
target_postgres/: __init__.py  denest.py  exceptions.py  gcs.py  globals.py  json_schema.py  postgres.py  postgres_schema.py  rdbms_base.py  singer.py  singer_stream.py  sql_base.py  sql_main.py  sql_schema.py  state_tracker.py  stream_tracker.py  target_tools.py
target_postgres/pipes/: batch.py  load.py  sql_flatten.py
target_sql/: __init__.py  pysize.py  singer_stream.py  target_postgres.py  target_redshift.py  target_sql.py
tests/: __init__.py  config.json  fixtures.py  target.py  test_BufferedSingerStream.py  test_denest.py  test_json_schema.py  test_postgres.py  test_postgres_schema.py  test_sandbox.py  test_sql_base.py  test_sql_main.py  test_target_tools.py
tests/inputs/: test_1.jsonl  test_5.jsonl
tests/migrations/: test_migrations.py
tests/migrations/data/: tap
tests/migrations/scripts/: install_schema_versions.sh  to_latest.sh  to_target.sh
tests/unit/: test_BufferedSingerStream.py  test_denest.py  test_json_schema.py  test_postgres.py  test_sandbox.py  test_target_tools.py
tests/utils/: fixtures.py
