[tool.poetry]
name = "singer-target-postgres"
version = "0.2.4"
authors = ["datamill"]
description = "Singer.io target for loading data into postgres"
readme = "README.md"
homepage = "https://github.com/datamill-co/target-postgres"
repository = "https://github.com/datamill-co/target-postgres"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = "MIT"
packages = [{include = "target_postgres"}]

[project.urls]
"Homepage" = "https://github.com/datamill-co/target-postgres"
"Bug Tracker" = "https://github.com/datamill-co/target-postgres/issues"


[tool.poetry.dependencies]
python = ">=3.7"
arrow = "^1.2.3"
psycopg2 = "^2.8.5"
singer-python = "^5.9.0"

[tool.poetry.group.dev.dependencies]
chance = {version = "^0.110", optional = true}
Faker =  {version = "^15.1.3", optional = true}
pytest = {version = "^7.2.0", optional = true}


[tool.poetry.extras]
tests = [
    "pytest",
    "chance",
    "Faker",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
